@@ -1,5 +1,10 @@
 version: 2
+build:
+  os: ubuntu-22.04
+  tools:
+    python: '3.8'
 python:
-   version: 3.7
-   install:
-      - requirements: docs/requirements.txt
+  install:
+    - method: pip
+      path: .
+      extra_requirements: [ docs ]
