@@ -28,23 +28,8 @@ checks, so the build will fail.
 ## Line Endings
 
 The [`.gitattributes`](.gitattributes) file controls line endings for the files
-in this repository.  It would be simplest to have files in the Git working copy
-use native line endings.  However, I develop this code on multiple platforms,
-and the files in the published PyPI package get the line endings from the
-working copy.  If we use native line endings, the format of the published
-package will vary depending on where the publish step was run.  This is
-confusing, and can cause problems for downstream users who expect the PyPI
-package to have a consistent format.  Instead of relying on automatic behavior,
-the `.gitattributes` file forces most files to have UNIX line endings.
-
-This generally works ok, except for the [`docs/requirements.txt`](docs/requirements.txt) file
-generated by Poetry.  Unfortunately, all of the files that Poetry generates
-have native platform line endings, and you can't override that behavior.  Even
-with sane configuration in `.gitattributes`, you sometimes still get spurious
-differences, where Git says that a file has changed but then `git diff` shows
-an empty result.  The `run` script and the pre-commit hooks both normalize the
-line endings for `requirements.txt`.  I wish there were a standard way to do
-this in Poetry or in Python, but there isn't as of this writing.
+in this repository.  Instead of relying on automatic behavior, the
+`.gitattributes` file forces most files to have UNIX line endings.
 
 ## Prerequisites
 
@@ -164,7 +149,6 @@ Additional tasks:
 - run docs -o: Build the Sphinx documentation and open in a browser
 - run publish: Publish the current code to PyPI and push to GitHub
 - run release: Release a specific version and tag the code
-- run requirements: Regenerate the docs/requirements.txt file
 
 To run scripts, use poetry directly:
 
