@@ -41,16 +41,19 @@ cback3-span = 'CedarBackup3.scripts:span'
 python = ">=3.8,<4"
 chardet = "^4.0.0"
 importlib-metadata = "^5.2.0"
+sphinx = { version="^4.5.0", optional=true }
+sphinx-autoapi = { version="^1.8.4", optional=true }
+toml = { version="^0.10.2", optional=true }
+
+[tool.poetry.extras]
+docs = [ "sphinx", "sphinx-autoapi", "toml" ]
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^6.3.2"
 pylint = "^2.15.0"
-Sphinx = "^4.5.0"
-toml = "^0.10.2"
 pre-commit = "^2.18.1"
 black = "^22.3.0"
 isort = "^5.10.1"
-sphinx-autoapi = "^1.8.4"
 coveralls = "^3.3.1"
 colorama = "^0.4.5"
 
